CCTRI-2203: Add base template.

--- a/templates/authorize.html
+++ b/templates/authorize.html
@@ -1,35 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-   <body>
-      <h1>STIX-CTIM Converter</h1>
-
-      <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
-
+{% extends "base.html" %}
+{% block content %}
       <form action="/ui/authorize" method="post" novalidate>
          {{ authorize_form.hidden_tag() }}
         <p>
             {{ authorize_form.client_id.label }}<br>
             {{ authorize_form.client_id(size=64) }}
+            {% for error in authorize_form.client_id.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
         </p>
         <p>
             {{ authorize_form.client_password.label }}<br>
             {{ authorize_form.client_password(size=64) }}
+            {% for error in authorize_form.client_password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
         </p>
           <p>
             {{ authorize_form.region.label }}<br>
             {{ authorize_form.region(cols='20') }}
+            {% for error in authorize_form.region.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
         </p>
         <p>{{ authorize_form.submit() }}</p>
       </form>
-
-   </body>
-</html>
+{% endblock %}
