CCTRI-2203: Add error message flashing.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>STIX-CTIM Converter</title>
+</head>
    <body>
       <h1>STIX-CTIM Converter</h1>
 
