--- a/templates/main.html
+++ b/templates/main.html
@@ -1,20 +1,45 @@
 {% extends "base.html" %}
+{% from "_formhelpers.html" import render_string_field %}
+{% from "_formhelpers.html" import render_select_field %}
+
 {% block content %}
       <button type="button" style="border-color: {{'red' if not authorized else 'green'}}" onclick="window.location.href='{{ url_for( '.authorize') }}';">Authorize</button>
 
       <form action="/" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
-            {{ form.content.label }}<br>
-            {{ form.content(rows='20',cols='150') }}
+            <h2>{{ form.content.label }}</h2>
+            {{ form.content(rows='15',cols='150') }}
             {% for error in form.content.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
+
+        {{ render_string_field(form.external_id_prefix) }}
+        {{ render_string_field(form.source) }}
+        {{ render_string_field(form.source_uri) }}
+
+           <h3> Indicator </h3>
+          {{ form.indicator.hidden_tag() }}
+        {{ render_string_field(form.indicator.producer) }}
+        {{ render_string_field(form.indicator.title) }}
+        {{ render_string_field(form.indicator.short_description) }}
+        {{ render_select_field(form.indicator.confidence) }}
+        {{ render_select_field(form.indicator.severity) }}
+
+          <h3> Sighting </h3>
+          {{ form.sighting.hidden_tag() }}
+        {{ render_string_field(form.sighting.title) }}
+        {{ render_string_field(form.sighting.short_description) }}
+        {{ render_select_field(form.sighting.confidence) }}
+        {{ render_select_field(form.sighting.severity) }}
+        {{ render_select_field(form.sighting.count) }}
+        {{ render_select_field(form.sighting.internal) }}
+
         <p>{{ form.translate() }}</p>
         <p>
             {{ form.bundle.label }}<br>
-            {{ form.bundle(rows='20',cols='150') }}
+            {{ form.bundle(rows='15',cols='150') }}
             {% for error in form.bundle.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
