--- a/templates/main.html
+++ b/templates/main.html
@@ -3,12 +3,15 @@
 {% from "_formhelpers.html" import render_text_area %}
 
 {% block content %}
-      <button type="button" style="border-color: {{'red' if not authorized else 'green'}}" onclick="window.location.href='{{ url_for( '.authorize') }}';">Authorize</button>
+    <form action='{{ url_for( '.authorize') }}'">
+        <input style=" background-color: {{'#AF4C4C' if not authorized else '#4CAF50'}}" type="submit" value="Authorize" /><br><br>
+    </form>
 
-      <form action="/" method="post" novalidate>
+    <form action="/" method="post" novalidate>
         {{ form.hidden_tag() }}
         {{ render_text_area(form.content) }}
 
+        {{ render_field(form.exclude) }}
         {{ render_field(form.external_id_prefix) }}
         {{ render_field(form.source) }}
         {{ render_field(form.source_uri) }}
@@ -32,7 +35,7 @@
         {{ render_field(form.sighting.internal) }}
 
 
-        <p>{{ form.translate() }}</p>
+        <p>{{ form.translate() }}</p> <br><br>
         {{ render_text_area(form.bundle) }}
 
           {% if (form.bundle.data) %}
