CCTRI-2203: Rename translator to convertor.

--- a/templates/main.html
+++ b/templates/main.html
@@ -37,7 +37,7 @@
         {{ render_field(form.sighting.internal) }}
 
 
-        <p>{{ form.translate() }}</p> <br><br>
+        <p>{{ form.convert() }}</p> <br><br>
 
         {{ render_text_area(form.bundle) }}
 
