CCTRI-2475 Update converter UI

--- a/code/templates/_formhelpers.html
+++ b/code/templates/_formhelpers.html
@@ -24,3 +24,7 @@
     </div>
 {% endmacro %}
 
+{% macro render_file_picker(field) %}
+    <input name="source_file" type="file" id="file-selector">
+{% endmacro %}
+
