--- a/code/templates/main.html
+++ b/code/templates/main.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% from "_formhelpers.html" import render_field %}
 {% from "_formhelpers.html" import render_text_area %}
+{% from "_formhelpers.html" import render_file_picker %}
 
 {% block content %}
 
@@ -12,36 +13,25 @@
     <form action="/" method="post" novalidate>
         {{ form.hidden_tag() }}
 
+          {{ render_file_picker(form.content) }}
+    <script>
+        document.getElementById('file-selector')
+            .addEventListener('change', function() {
+
+            var fr=new FileReader();
+            fr.onload=function(){
+                document.getElementById('content')
+                        .textContent=fr.result;
+            }
+
+            fr.readAsText(this.files[0]);
+        })
+    </script>
         {{ render_text_area(form.content) }}
-        {{ render_field(form.exclude) }}
-        {{ render_field(form.external_id_prefix) }}
-        {{ render_field(form.source) }}
-        {{ render_field(form.source_uri) }}
-
-
-           <h3> Indicator </h3>
-          {{ form.indicator.hidden_tag() }}
-        {{ render_field(form.indicator.title) }}
-        {{ render_field(form.indicator.short_description) }}
-        {{ render_field(form.indicator.confidence) }}
-        {{ render_field(form.indicator.severity) }}
-        {{ render_field(form.indicator.producer) }}
-
-          <h3> Sighting </h3>
-          {{ form.sighting.hidden_tag() }}
-        {{ render_field(form.sighting.title) }}
-        {{ render_field(form.sighting.short_description) }}
-        {{ render_field(form.sighting.confidence) }}
-        {{ render_field(form.sighting.severity) }}
-        {{ render_field(form.sighting.count) }}
-        {{ render_field(form.sighting.internal) }}
-
-
         <p>{{ form.convert() }}</p> <br><br>
+        {{ render_text_area(form.bulk) }}
 
-        {{ render_text_area(form.bundle) }}
-
-        {% if (form.bundle.data) %}
+        {% if (form.bulk.data) %}
             <p>{{ form.submit() }}</p>
         {% endif %}
     </form>
