--- a/code/static/styles.css
+++ b/code/static/styles.css
@@ -1,7 +1,7 @@
-.btn-not-authorized {
-    color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+.btn-authorized {
+    color: #000;
+    background-color: #ababab;
+    border-color: #393939;
     font-weight: bold;
 }
 .badge-small {
