fixed main form submit url

--- a/code/templates/convert.html
+++ b/code/templates/convert.html
@@ -12,7 +12,7 @@
     </ol>
 </nav>
 
-<form action="/" method="post" novalidate>
+<form action="/upload" method="post" novalidate>
     {{ form.hidden_tag() }}
 
     {{ render_file_picker(form.content) }}
