added get started button to /upload

--- a/code/templates/landing_page.html
+++ b/code/templates/landing_page.html
@@ -11,6 +11,10 @@
     </ol>
 </nav>
 
+<div class="float-end">
+    <a class="btn btn-primary" href="/upload">Get Started</a>
+</div>
+
 <div>
     <h2>Use Case</h2>
     <hr />
