--- a/code/templates/landing_page.html
+++ b/code/templates/landing_page.html
@@ -25,7 +25,7 @@
 <div>
     <h2>Video Tutorial</h2>
     <hr />
-    <p><iframe width="640" height="480" src="https://www.youtube.com/embed/xxxxxxxxxxx" title="YouTube video player"
+    <p><iframe width="640" height="480" src="https://www.youtube.com/embed/AKLst2vIuiA" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe></p>
