added hyperlinks and description

--- a/code/templates/landing_page.html
+++ b/code/templates/landing_page.html
@@ -16,10 +16,16 @@
 </div>
 
 <div>
-    <h2>Use Case</h2>
+    <h2>About</h2>
     <hr />
-    <p>This website is an online tool to convert from a Structured Threat Intelligence Expression (STIX) format to Cisco
-        Threat Intelligence Model (CTIM).</p>
+    <p>This website is an online tool to convert from a Structured Threat Intelligence Expressions (STIX) format to
+        Cisco Threat Intelligence Model (CTIM). This translation component is crucial in the rapid investigation of
+        incidents, or when threat hunting. Structured Threat Information Expression (STIX) is a language and
+        serialization format used to exchange cyber threat intelligence (CTI).<br/>
+        <br /><a href="https://oasis-open.github.io/cti-documentation/stix/intro">STIX Documentation</a>
+        <br /><a href="https://github.com/threatgrid/ctim/blob/master/doc/tutorials/modeling-threat-intel-ctim.md">Modeling Threat Intelligence in CTIM</a>
+    </p>
+
 </div>
 
 <div>
