added upload btn in about section

--- a/code/templates/landing_page.html
+++ b/code/templates/landing_page.html
@@ -23,7 +23,8 @@
         incidents, or when threat hunting. Structured Threat Information Expression (STIX) is a language and
         serialization format used to exchange cyber threat intelligence (CTI).<br/>
         <br /><a href="https://oasis-open.github.io/cti-documentation/stix/intro">STIX Documentation</a>
-        <br /><a href="https://github.com/threatgrid/ctim/blob/master/doc/tutorials/modeling-threat-intel-ctim.md">Modeling Threat Intelligence in CTIM</a>
+        <br /><a href="https://github.com/threatgrid/ctim/blob/master/doc/tutorials/modeling-threat-intel-ctim.md">Modeling Threat Intelligence in CTIM</a><br/><br/>
+        <a class="btn btn-primary" href="/upload">Upload</a>
     </p>
 
 </div>
@@ -48,7 +49,7 @@
 <div>
     <h2>Questions?</h2>
     <hr />
-    <p>TBD</p>
+    <p><a href="mailto:tr-integrations-support@cisco.com">tr-integrations-support@cisco.com</a></p>
 </div>
 
 
